tests/required/02-no-ident.stderr
error: Missing field `ident`
 --> tests/required/02-no-ident.rs:3:10
  |
3 | #[derive(Required)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Required` (in Nightly builds, run with -Z macro-backtrace for more info)
